# TowerOfHanoi

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Doxyfile  Makefile  README.md  baseline.sln
ExportProgetto/: ExportFinalVersion.ovo  ProvaTavoloovo.ovo  ProvaTavoloovoNew.ovo  darkWood.dds  dischi.dds  dischi2.dds  divano.dds  legnoBianco.dds  lightWood.dds  muro.dds  paviemento1.dds  pavimento.dds  plastic.dds
client/: CMakeLists.txt  Makefile  client.vcxproj  client.vcxproj.filters  hanoiGame.cpp  hanoiGame.h  main.cpp  setup.cpp  setup.h
client/Test/: test_suite.cpp  test_suite.h
client/x64/Debug/: client.exe.recipe  client.ilk  vc143.idb
client/x64/Debug/client.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  client.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
doc/html/: FreeImage_8h.html  FreeImage_8h__dep__incl.map  FreeImage_8h__incl.map  FreeImage_8h_source.html  README_8md.html  __features_8hpp.html  __features_8hpp_source.html  __fixes_8hpp.html  __fixes_8hpp__dep__incl.map  __fixes_8hpp__dep__incl.md5  __fixes_8hpp__incl.map  __fixes_8hpp__incl.md5  __fixes_8hpp_source.html  __matrix__vectorize_8hpp.html  __matrix__vectorize_8hpp__dep__incl.map  __matrix__vectorize_8hpp__dep__incl.md5  __matrix__vectorize_8hpp_source.html  __noise_8hpp.html  __noise_8hpp__dep__incl.map  __noise_8hpp__dep__incl.md5  __noise_8hpp__incl.map  __noise_8hpp__incl.md5  __noise_8hpp_source.html  __swizzle_8hpp.html  __swizzle_8hpp_source.html  __swizzle__func_8hpp.html  __swizzle__func_8hpp_source.html  __vectorize_8hpp.html  __vectorize_8hpp__dep__incl.map  __vectorize_8hpp__dep__incl.md5  __vectorize_8hpp_source.html  _free_image_8h.html  _free_image_8h__dep__incl.map  _free_image_8h__dep__incl.md5  _free_image_8h__incl.map  _free_image_8h__incl.md5  _free_image_8h_source.html  _r_e_a_d_m_e_8md.html  annotated.html  associated__min__max_8hpp.html  (+5354 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_1.js  classes_10.js  classes_12.js  classes_13.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  (+137 more)
engine/: CMakeLists.txt  Makefile  base.h  camera.cpp  camera.h  directionallight.cpp  directionallight.h  dummy_test.cpp  engine.cpp  engine.h  engine.vcxproj  engine.vcxproj.filters  engine_api.h  engine_test.cpp  hanoiGame.cpp  hanoiGame.h  instance.cpp  instance.h  light.cpp  light.h  light_number_exception.h  list.cpp  list.h  material.cpp  material.h  mesh.cpp  mesh.h  node.cpp  node.h  object.cpp  object.h  omnidirectionallight.cpp  omnidirectionallight.h  orthographic_camera.cpp  orthographic_camera.h  ovoreader.cpp  ovoreader.h  perspective_camera.cpp  perspective_camera.h  scene.cpp  (+5 more)
engine/doc/html/: annotated.html  annotated_dup.js  class_eng_1_1_base-members.html  class_eng_1_1_base.html  class_eng_1_1_base.js  classes.html  doxygen_crawl.html  engine_8cpp.html  engine_8cpp.js  engine_8h.html  engine_8h.js  engine_8h_source.html  files.html  files_dup.js  functions.html  functions_func.html  globals.html  globals_defs.html  index.html  navtreedata.js  navtreeindex0.js  struct_eng_1_1_base_1_1_reserved-members.html  struct_eng_1_1_base_1_1_reserved.html  struct_eng_1_1_base_1_1_reserved.js
engine/doc/html/search/: all_2.js  all_4.js  all_6.js  all_7.js  functions_1.js  functions_3.js  searchdata.js
engine/doc/latex/: annotated.tex  class_eng_1_1_base.tex  engine_8cpp.tex  engine_8h.tex  engine_8h_source.tex  files.tex  refman.tex  struct_eng_1_1_base_1_1_reserved.tex
engine/x64/Debug/: engine.dll.recipe  engine.ilk  vc143.idb
engine/x64/Debug/engine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  engine.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
x64/Debug/: engine.exp  engine.lib
x64/Release/: engine.exp  engine.lib
